// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header default 1`] = `
<div
  className="root-0-2-1"
>
  <div>
    <a
      href="//ladot.lacity.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="LA Department of Transportation Logo"
        className="logo-0-2-2"
        src="ladot_white.png"
      />
    </a>
  </div>
  <ul
    className="navbar-0-2-3"
  >
    <li>
      <a
        className="link-0-2-4"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className="link-0-2-4"
        href="/projects"
        onClick={[Function]}
      >
        Projects
      </a>
    </li>
    <li>
      <a
        className="link-0-2-4"
        href="/calculation?pageNo=1&view=w"
        onClick={[Function]}
      >
        New Project
      </a>
    </li>
    <li>
      <a
        className="link-0-2-4"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots NavButton disabled 1`] = `
<div
  className="tdm-wizard-nav-button-disabled"
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots NavButton enabled 1`] = `
<div
  className="tdm-wizard-nav-button"
  onClick={[Function]}
>
  Wizard Nav Button Label
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (False) 1`] = `
Array [
  <div
    className="field-0-2-28 checkboxFieldWrapper-0-2-35"
  >
    <div
      className="checkboxFieldLabel-0-2-36"
    >
      Residential
    </div>
    <input
      checked={false}
      className="checkbox-0-2-37"
      name="LAND_USE_RESIDENTIAL"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>,
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>,
]
`;

exports[`Storyshots RuleInput default Input Boolean (True) 1`] = `
Array [
  <div
    className="field-0-2-28 checkboxFieldWrapper-0-2-35"
  >
    <div
      className="checkboxFieldLabel-0-2-36"
    >
      Residential
    </div>
    <input
      checked={true}
      className="checkbox-0-2-37"
      name="LAND_USE_RESIDENTIAL"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>,
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>,
]
`;

exports[`Storyshots RuleInput default Input Number 1`] = `
Array [
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      Sq Ft - Retail
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={null}
        name="SF_RETAIL"
        onChange={[Function]}
        type="text"
        value={42}
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      sq ft
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>,
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>,
]
`;

exports[`Storyshots RuleInput default Input String 1`] = `
Array [
  <div
    className="field-0-2-28 textFieldWrapper-0-2-41"
    onBlur={[Function]}
  >
    <div
      className="textInputLabel-0-2-45 requiredInputLabel-0-2-47"
    >
      Project Name*
    </div>
    <input
      className="textInputLabel-0-2-45"
      name="PROJECT_NAME"
      onChange={[Function]}
      type="text"
      value="My Project Name"
    />
  </div>,
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>,
]
`;

exports[`Storyshots RuleInput default Strategy Boolean (False) 1`] = `
<div
  className="strategyContainer-0-2-49"
>
  <div
    className="strategyName-0-2-50"
  >
     
    Pricing/Unbundling
     
  </div>
  <div>
    <input
      checked={false}
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>
  <div
    className="points-0-2-51"
  >
    NaN 
  </div>
  <div
    className="points-0-2-51"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Boolean (True) 1`] = `
<div
  className="strategyContainer-0-2-49"
>
  <div
    className="strategyName-0-2-50"
  >
     
    Pricing/Unbundling
     
  </div>
  <div>
    <input
      checked={true}
      name="STRATEGY_PARKING_1"
      onChange={[Function]}
      type="checkbox"
      value={true}
    />
  </div>
  <div
    className="points-0-2-51"
  >
    NaN 
  </div>
  <div
    className="points-0-2-51"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Choice 1`] = `
<div
  className="strategyContainer-0-2-49"
>
  <div
    className="strategyName-0-2-50"
  >
     
    Affordable Housing Level
     
  </div>
  <div
    className="choiceSelectContainer-0-2-54"
  >
    <select
      name="STRATEGY_AFFORDABLE"
      onChange={[Function]}
      value=""
      width="100%"
    >
      <option
        value=""
      >
        &lt; 35% of State Density Bonus
      </option>
      <option
        value="1"
      >
        35% of State Density Bonus
      </option>
      <option
        value="2"
      >
        TOC Tier 1
      </option>
      <option
        value="3"
      >
        TOC Tier 4
      </option>
      <option
        value="4"
      >
        100% Affortdable
      </option>
    </select>
  </div>
  <div
    className="points-0-2-51"
  >
    NaN 
  </div>
  <div
    className="points-0-2-51"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInput default Strategy Number 1`] = `
<div
  className="strategyContainer-0-2-49"
>
  <div
    className="strategyName-0-2-50"
  >
     
    Network Improvement
     
  </div>
  <div
    className="numberInputContainer-0-2-52"
  >
    <input
      className="numberInput-0-2-53"
      max={100}
      min={0}
      name="PTS_ACCESS_3"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="points-0-2-51"
  >
    NaN 
  </div>
  <div
    className="points-0-2-51"
  >
     
  </div>
</div>
`;

exports[`Storyshots RuleInputList default 1`] = `
<div
  className="root-0-2-57"
>
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      # Habitable Rooms &lt; 3
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={0}
        name="UNITS_HABIT_LT3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      # Habitable Rooms = 3
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={0}
        name="UNITS_HABIT_3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      # Habitable Rooms &gt; 3
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={0}
        name="UNITS_HABIT_GT3"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      Condo - Units
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={0}
        name="UNITS_CONDO"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      dwelling units
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>
  <div
    className="field-0-2-28 numberFieldWrapper-0-2-29"
  >
    <div
      className="textInputLabel-0-2-45"
    >
      Condo - Enter Parking Space Req'd
    </div>
    <div
      className="numberField-0-2-30"
    >
      <input
        className="input-0-2-32"
        max={null}
        min={0}
        name="PARK_CONDO"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="numberFieldUnits-0-2-31"
    >
      spcs
    </div>
    <div
      className="calcUnitsCaption-0-2-34"
    >
       
    </div>
  </div>
  <div
    className="textInputLabel-0-2-45 errorLabel-0-2-48"
  >
    
  </div>
</div>
`;

exports[`Storyshots RuleInputPanels default 1`] = `
Array [
  <div
    className="panelContainer-0-2-58"
  >
    <div
      className="strategyContainer-0-2-59"
    >
      <h4
        className="strategyName-0-2-60"
      >
        Residential Inputs
      </h4>
    </div>
    <div
      className="root-0-2-57"
    >
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          # Habitable Rooms &lt; 3
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="UNITS_HABIT_LT3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          # Habitable Rooms = 3
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="UNITS_HABIT_3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          # Habitable Rooms &gt; 3
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="UNITS_HABIT_GT3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Condo - Units
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="UNITS_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          dwelling units
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Condo - Enter Parking Space Req'd
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="PARK_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          spcs
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-58"
  >
    <div
      className="strategyContainer-0-2-59"
    >
      <h4
        className="strategyName-0-2-60"
      >
        Commercial Inputs
      </h4>
    </div>
    <div
      className="root-0-2-57"
    >
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Restaurant/Bar/General
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_RESTAURANT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Health Club
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_HEALTH_CLUB"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Take-out Restaurant
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_RESTAURANT_TAKEOUT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Office, Business, Manufacturing, Industrial
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_OFFICE"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Warehouse
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_WAREHOUSE"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-58"
  >
    <div
      className="strategyContainer-0-2-59"
    >
      <h4
        className="strategyName-0-2-60"
      >
        Institutional Inputs
      </h4>
    </div>
    <div
      className="root-0-2-57"
    >
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Medical Offices, Clinics, Service Facilities
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_INST_MEDICAL_SVC"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Other Institutional
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_INST_OTHER"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Government Institution
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_INST_GOV"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Patient Hospital Beds
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="BED_HOSPITAL"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          beds
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Convalescent Institution Beds
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="BED_CONVALESCENT"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          beds
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-58"
  >
    <div
      className="strategyContainer-0-2-59"
    >
      <h4
        className="strategyName-0-2-60"
      >
        Other Land Use Inputs
      </h4>
    </div>
    <div
      className="root-0-2-57"
    >
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          # Seats - Auditorium
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SEAT_AUDITORIUM"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          seats
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
      <div
        className="field-0-2-28 numberFieldWrapper-0-2-29"
      >
        <div
          className="textInputLabel-0-2-45"
        >
          Sq Ft - Auditorium w/o Seats
        </div>
        <div
          className="numberField-0-2-30"
        >
          <input
            className="input-0-2-32"
            max={null}
            min={0}
            name="SF_AUDITORIUM_NO_SEATS"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="numberFieldUnits-0-2-31"
        >
          sq ft
        </div>
        <div
          className="calcUnitsCaption-0-2-34"
        >
           
        </div>
      </div>
      <div
        className="textInputLabel-0-2-45 errorLabel-0-2-48"
      >
        
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots RuleStrategyList default 1`] = `
<div
  className="root-0-2-63"
>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Cash-Out
       
    </div>
    <div>
      <input
        checked={false}
        name="STRATEGY_PARKING_2"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Pricing/Unbundling
       
    </div>
    <div>
      <input
        checked={false}
        name="STRATEGY_PARKING_1"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Shared Parking
       
    </div>
    <div
      className="choiceSelectContainer-0-2-54"
    >
      <select
        name="STRATEGY_PARKING_3"
        onChange={[Function]}
        value=""
        width="100%"
      >
        <option
          value="0"
        >
          &lt; 25% spaces shared
        </option>
        <option
          value="25"
        >
          25%+ spaces shared
        </option>
        <option
          value="50"
        >
          50%+ spaces shared
        </option>
        <option
          value="75"
        >
          75%+ spaces shared
        </option>
        <option
          value="100"
        >
          100% spaces shared
        </option>
      </select>
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Public Parking
       
    </div>
    <div>
      <input
        checked={false}
        name="STRATEGY_PARKING_4"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Reduced Parking Supply
       
    </div>
    <div>
      <input
        checked={false}
        name="STRATEGY_PARKING_5"
        onChange={[Function]}
        type="checkbox"
        value={true}
      />
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
  <div
    className="strategyContainer-0-2-49"
  >
    <div
      className="strategyName-0-2-50"
    >
       
      Pts for Pricing/Unbundling
       
    </div>
    <div
      className="numberInputContainer-0-2-52"
    >
      <input
        className="numberInput-0-2-53"
        max={8}
        min={8}
        name="PTS_PARKING_1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="points-0-2-51"
    >
      NaN 
    </div>
    <div
      className="points-0-2-51"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots RuleStrategyPanels default 1`] = `
Array [
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Accessibility
      </h4>
      <div
        className="points-0-2-67"
      >
        Possible
      </div>
      <div
        className="points-0-2-67"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Pts for Correct Substandard Infrastructure
           
        </div>
        <div
          className="numberInputContainer-0-2-52"
        >
          <input
            className="numberInput-0-2-53"
            max={5}
            min={2}
            name="PTS_ACCESS_1"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Pts for Intersection Improvement
           
        </div>
        <div
          className="numberInputContainer-0-2-52"
        >
          <input
            className="numberInput-0-2-53"
            max={5}
            min={2}
            name="PTS_ACCESS_2"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Correct Substandard Infrastructure
           
        </div>
        <div
          className="choiceSelectContainer-0-2-54"
        >
          <select
            name="STRATEGY_ACCESS_1"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value="0"
            >
              &lt; 25% streets improved
            </option>
            <option
              value="25"
            >
              25%+ streets improved
            </option>
            <option
              value="50"
            >
              50%+ streets improved
            </option>
            <option
              value="75"
            >
              75%+ streets improved
            </option>
            <option
              value="100"
            >
              100% streets improved
            </option>
          </select>
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Intersection Improvements
           
        </div>
        <div
          className="choiceSelectContainer-0-2-54"
        >
          <select
            name="STRATEGY_ACCESS_2"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value="0"
            >
              &lt; 25% intersections improved
            </option>
            <option
              value="25"
            >
              25%+ intersections improved
            </option>
            <option
              value="50"
            >
              50%+ intersections improved
            </option>
            <option
              value="75"
            >
              75%+ intersections improved
            </option>
            <option
              value="100"
            >
              100% intersections improved
            </option>
          </select>
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Network Improvement
           
        </div>
        <div
          className="numberInputContainer-0-2-52"
        >
          <input
            className="numberInput-0-2-53"
            max={100}
            min={0}
            name="PTS_ACCESS_3"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Affordable Housing
      </h4>
      <div
        className="points-0-2-67"
      >
        Possible
      </div>
      <div
        className="points-0-2-67"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Affordable Housing Level
           
        </div>
        <div
          className="choiceSelectContainer-0-2-54"
        >
          <select
            name="STRATEGY_AFFORDABLE"
            onChange={[Function]}
            value=""
            width="100%"
          >
            <option
              value=""
            >
              &lt; 35% of State Density Bonus
            </option>
            <option
              value="1"
            >
              35% of State Density Bonus
            </option>
            <option
              value="2"
            >
              TOC Tier 1
            </option>
            <option
              value="3"
            >
              TOC Tier 4
            </option>
            <option
              value="4"
            >
              100% Affortdable
            </option>
          </select>
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Bicycle Facilities
      </h4>
      <div
        className="points-0-2-67"
      >
        Possible
      </div>
      <div
        className="points-0-2-67"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Locate Near Bike Share
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_BIKE_1"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Points for Locate Near Bike Share
           
        </div>
        <div
          className="numberInputContainer-0-2-52"
        >
          <input
            className="numberInput-0-2-53"
            max={2}
            min={2}
            name="PTS_BIKE_1"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Bike Share Station
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_BIKE_2"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Bike Share Memberships
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_BIKE_3"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Bike Parking
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_BIKE_4"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Changing / Shower / Locker Facilities
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_BIKE_5"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Bike Bonus
           
        </div>
        <div
          className="allElse-0-2-56"
          name="STRATEGY_BIKE_BONUS"
        />
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
    </div>
  </div>,
  <div
    className="panelContainer-0-2-64"
  >
    <div
      className="strategyContainer-0-2-65"
    >
      <h4
        className="strategyName-0-2-66"
      >
        Car Sharing
      </h4>
      <div
        className="points-0-2-67"
      >
        Possible
      </div>
      <div
        className="points-0-2-67"
      >
        Earned
      </div>
    </div>
    <div
      className="root-0-2-63"
    >
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Car Share Parking
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_CAR_SHARE_1"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Car Share Memberships
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_CAR_SHARE_2"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Blue LA Car Share Memberships
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_CAR_SHARE_3"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Private Car Share Fleet
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_CAR_SHARE_4"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Electric Vehicle Bonus
           
        </div>
        <div>
          <input
            checked={false}
            name="STRATEGY_CAR_SHARE_ELECTRIC"
            onChange={[Function]}
            type="checkbox"
            value={true}
          />
        </div>
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
      <div
        className="strategyContainer-0-2-49"
      >
        <div
          className="strategyName-0-2-50"
        >
           
          Car Share Bonus
           
        </div>
        <div
          className="allElse-0-2-56"
          name="STRATEGY_CAR_SHARE_BONUS"
        />
        <div
          className="points-0-2-51"
        >
          NaN 
        </div>
        <div
          className="points-0-2-51"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Sidebar default 1`] = `
<div
  className="container-0-2-69"
>
  <div />
  <div>
    <div
      className="links-0-2-70"
    >
      <a
        className="link-0-2-71"
        href="/"
        onClick={[Function]}
      >
         
        Terms and Conditions
      </a>
      <div>
        |
      </div>
      <a
        className="link-0-2-71"
        href="/"
        onClick={[Function]}
      >
         
        Privacy Policy
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots SinglePageResultList default 1`] = `
<div
  className="root-0-2-5"
>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Req'd Parking
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Residential
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Target Points
    </h3>
    <div />
    <div>
       
      pts
    </div>
  </div>
  <div
    className="tdm-calculation-metrics-panel"
  >
    <h3>
      Parking Requirement - Hotel
    </h3>
    <div />
    <div>
       
      spcs
    </div>
  </div>
</div>
`;

exports[`Storyshots SinglePageResultView default 1`] = `
<div
  className="tdm-calculation-metrics-panel"
>
  <h3 />
  <div>
    -1
  </div>
  <div>
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Boolean (False) 1`] = `
<div
  className="rule-0-2-7"
>
  <div
    className="name-0-2-9"
  >
    Residential
  </div>
  <input
    checked={false}
    className="code-0-2-11"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-12"
  >
    
  </div>
  <div
    className="calcUnits-0-2-13"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Boolean (True) 1`] = `
<div
  className="rule-0-2-7"
>
  <div
    className="name-0-2-9"
  >
    Residential
  </div>
  <input
    checked={true}
    className="code-0-2-11"
    name="LAND_USE_RESIDENTIAL"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
  <div
    className="units-0-2-12"
  >
    
  </div>
  <div
    className="calcUnits-0-2-13"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleInput default Input Number 1`] = `
<div
  className="rule-0-2-7 numberRule-0-2-8"
>
  <div
    className="name-0-2-9"
  >
    Sq Ft - Retail
  </div>
  <input
    className="code-0-2-11"
    name="SF_RETAIL"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="units-0-2-12"
  >
    sq ft
  </div>
  <div
    className="calcUnits-0-2-13"
  >
     
  </div>
</div>
`;

exports[`Storyshots SinglePageRuleList default 1`] = `
<div
  className="root-0-2-16"
>
  <div
    className="rule-0-2-7 numberRule-0-2-8"
  >
    <div
      className="name-0-2-9"
    >
      # Habitable Rooms &lt; 3
    </div>
    <input
      className="code-0-2-11"
      name="UNITS_HABIT_LT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-12"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-13"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-7 numberRule-0-2-8"
  >
    <div
      className="name-0-2-9"
    >
      # Habitable Rooms = 3
    </div>
    <input
      className="code-0-2-11"
      name="UNITS_HABIT_3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-12"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-13"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-7 numberRule-0-2-8"
  >
    <div
      className="name-0-2-9"
    >
      # Habitable Rooms &gt; 3
    </div>
    <input
      className="code-0-2-11"
      name="UNITS_HABIT_GT3"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-12"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-13"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-7 numberRule-0-2-8"
  >
    <div
      className="name-0-2-9"
    >
      Condo - Units
    </div>
    <input
      className="code-0-2-11"
      name="UNITS_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-12"
    >
      dwelling units
    </div>
    <div
      className="calcUnits-0-2-13"
    >
       
    </div>
  </div>
  <div
    className="rule-0-2-7 numberRule-0-2-8"
  >
    <div
      className="name-0-2-9"
    >
      Condo - Enter Parking Space Req'd
    </div>
    <input
      className="code-0-2-11"
      name="PARK_CONDO"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div
      className="units-0-2-12"
    >
      spcs
    </div>
    <div
      className="calcUnits-0-2-13"
    >
       
    </div>
  </div>
</div>
`;

exports[`Storyshots SinglePageRulePanels default 1`] = `
Array [
  <div
    className="panel-0-2-17"
  >
    <fieldset>
      <legend
        className="legend-0-2-18"
      >
        Residential Inputs
      </legend>
      <div
        className="root-0-2-16"
      >
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            # Habitable Rooms &lt; 3
          </div>
          <input
            className="code-0-2-11"
            name="UNITS_HABIT_LT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            # Habitable Rooms = 3
          </div>
          <input
            className="code-0-2-11"
            name="UNITS_HABIT_3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            # Habitable Rooms &gt; 3
          </div>
          <input
            className="code-0-2-11"
            name="UNITS_HABIT_GT3"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Condo - Units
          </div>
          <input
            className="code-0-2-11"
            name="UNITS_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            dwelling units
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Condo - Enter Parking Space Req'd
          </div>
          <input
            className="code-0-2-11"
            name="PARK_CONDO"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            spcs
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-17"
  >
    <fieldset>
      <legend
        className="legend-0-2-18"
      >
        Commercial Inputs
      </legend>
      <div
        className="root-0-2-16"
      >
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Restaurant/Bar/General
          </div>
          <input
            className="code-0-2-11"
            name="SF_RESTAURANT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Health Club
          </div>
          <input
            className="code-0-2-11"
            name="SF_HEALTH_CLUB"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Take-out Restaurant
          </div>
          <input
            className="code-0-2-11"
            name="SF_RESTAURANT_TAKEOUT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Office, Business, Manufacturing, Industrial
          </div>
          <input
            className="code-0-2-11"
            name="SF_OFFICE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Warehouse
          </div>
          <input
            className="code-0-2-11"
            name="SF_WAREHOUSE"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-17"
  >
    <fieldset>
      <legend
        className="legend-0-2-18"
      >
        Institutional Inputs
      </legend>
      <div
        className="root-0-2-16"
      >
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Medical Offices, Clinics, Service Facilities
          </div>
          <input
            className="code-0-2-11"
            name="SF_INST_MEDICAL_SVC"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Other Institutional
          </div>
          <input
            className="code-0-2-11"
            name="SF_INST_OTHER"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Government Institution
          </div>
          <input
            className="code-0-2-11"
            name="SF_INST_GOV"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Patient Hospital Beds
          </div>
          <input
            className="code-0-2-11"
            name="BED_HOSPITAL"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Convalescent Institution Beds
          </div>
          <input
            className="code-0-2-11"
            name="BED_CONVALESCENT"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            beds
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
  <div
    className="panel-0-2-17"
  >
    <fieldset>
      <legend
        className="legend-0-2-18"
      >
        Other Land Use Inputs
      </legend>
      <div
        className="root-0-2-16"
      >
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            # Seats - Auditorium
          </div>
          <input
            className="code-0-2-11"
            name="SEAT_AUDITORIUM"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            seats
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
        <div
          className="rule-0-2-7 numberRule-0-2-8"
        >
          <div
            className="name-0-2-9"
          >
            Sq Ft - Auditorium w/o Seats
          </div>
          <input
            className="code-0-2-11"
            name="SF_AUDITORIUM_NO_SEATS"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="units-0-2-12"
          >
            sq ft
          </div>
          <div
            className="calcUnits-0-2-13"
          >
             
          </div>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`Storyshots SinglePageTdmCalculation default 1`] = `
<div
  className="root-0-2-19"
>
  <div
    className="container-0-2-20"
  >
    <div
      className="switchButtonWrapper-0-2-21"
    >
      <div
        className="switchButton-0-2-22"
      >
        <button
          className="root-0-2-27"
        >
          Switch to  View
        </button>
      </div>
      <div
        className="root-0-2-5"
      >
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A + B
          </h3>
          <div>
            21
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            A * B
          </h3>
          <div>
            68
          </div>
          <div>
             
            beans
          </div>
        </div>
        <div
          className="tdm-calculation-metrics-panel"
        >
          <h3>
            Hypotenuse of Triangle with Sides A and B
          </h3>
          <div>
            17.46424919657298
          </div>
          <div>
             
            beans
          </div>
        </div>
      </div>
    </div>
    <div
      className="rulePanelWrapper-0-2-23"
    >
      <div
        className="rulePanel-0-2-24"
      >
        <h2>
          Project Parameters
        </h2>
        <div
          className="panel-0-2-17"
        >
          <fieldset>
            <legend
              className="legend-0-2-18"
            />
            <div
              className="root-0-2-16"
            >
              <div
                className="rule-0-2-7 numberRule-0-2-8"
              >
                <div
                  className="name-0-2-9"
                >
                  Input Integer A
                </div>
                <input
                  className="code-0-2-11"
                  name="INPUT_INTEGER_A"
                  onChange={[Function]}
                  type="text"
                  value={4}
                />
                <div
                  className="units-0-2-12"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-13"
                >
                   
                </div>
              </div>
              <div
                className="rule-0-2-7 numberRule-0-2-8"
              >
                <div
                  className="name-0-2-9"
                >
                  Input Integer B
                </div>
                <input
                  className="code-0-2-11"
                  name="INPUT_INTEGER_B"
                  onChange={[Function]}
                  type="text"
                  value={17}
                />
                <div
                  className="units-0-2-12"
                >
                  beans
                </div>
                <div
                  className="calcUnits-0-2-13"
                >
                   
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        className="transportDemandStrategies-0-2-25"
      >
        <h2>
           Transportation Demand Strategies
        </h2>
        <div
          sclassName="buttonWrapper-0-2-26"
        >
          &gt;
          <button
            className="tdm-wizard-pkg-button"
            onClick={[Function]}
          >
            Reset All Strategies
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SwitchViewButton default 1`] = `
<button
  className="root-0-2-27"
  onClick={[Function]}
>
  Switch View Button Label
</button>
`;
